# routes/authors.js
@@ -1,11 +1,13 @@
 const router = require('express').Router();
 const authorsController = require('../controllers/authors');
+const verifyToken = require('../middlewares/auth');
 
 router.get(
   '/',
   /* 
     #swagger.tags = ['Authors']
   */
+  verifyToken,
   authorsController.fetchAuthors
 );
 
@@ -14,14 +16,16 @@ router.post(
   /* 
     #swagger.tags = ['Authors']
   */
+  verifyToken,
   authorsController.addAuthor
 );
 
 router.delete(
-  '/:_id',
+  '/:id',
   /* 
     #swagger.tags = ['Authors']
   */
+  verifyToken,
   authorsController.validateId,
   authorsController.deleteAuthor
 );
